# all-clear

./: .gitignore  BUILD_PATHWAY.md  CLAUDE.md  README.md  amplify.yml  pilot-build-pathway.md
dashboard/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/pilot-request/: route.ts
dashboard/app/api/signed-url/: route.ts
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/app/dashboard/account/: page.tsx
dashboard/app/dashboard/cameras/: page.tsx
dashboard/app/dashboard/history/: page.tsx
dashboard/app/login/: page.tsx
dashboard/components/charts/: ChartCard.tsx  ViolationCharts.tsx
dashboard/components/feed/: DemoModeBar.tsx  DetailPanel.tsx  StatusPill.tsx  ViolationCard.tsx  ViolationFeed.tsx
dashboard/components/hero/: LiveTimer.tsx  Metric.tsx  StatusHero.tsx
dashboard/components/landing/: PilotForm.tsx
dashboard/components/layout/: ComingSoon.tsx  LogoutButton.tsx  NavRail.tsx
dashboard/components/ui/: bg-pattern.tsx
dashboard/lib/: demo-data.ts  status.ts  use-signed-url.ts  utils.ts  validations.ts
dashboard/lib/supabase/: middleware.ts  server.ts  types.ts
detection/: .env.example  pyproject.toml
detection/src/: alerts.py  debounce.py  detector.py  main.py  storage.py
detection/tests/: conftest.py  test_debounce.py  test_detector.py  test_gpu.py  test_storage.py  test_twilio.py
docs/: DEEP_DIVE.md  NOTES.md  PHASE_4_HANDOFF.md  PROOF.md  QUESTIONS.md  dashboard-design.md  schema.sql
(+2 files in other folders)
